public/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    text-align: center;
    background-color: rgb(245, 225, 216);
    color: #22181C;
    font-family: Noto Sans, sans-serif;
}

main {
    padding: 5% 10%;
}

.group:after {
  content: "";
  display: table;
  clear: both;
}

header {
    width: 100%;
    text-align: center;
    padding: 5% 10%;
}

/* #NAVIGATION
================================================== */

#mainnav {
    display: flex;
    font-weight: bold;
    text-transform:uppercase;
    letter-spacing: .05em;
    width: 100%;
}

#bookiLogoMobile {
    display: none;
}

#mainnav #menu {
    display: none;
    padding: .8em 1.5em;
    cursor: pointer;
}

#mainnav h1{
  margin-right: 45%;
}

#bookiLogo {
    color: rgb(152, 88, 57) !important;
    text-decoration: none;
    font-size: 2.5rem;
}

#mainnav ul {
    display: flex;
    justify-content: flex-end;
    margin: 0;
    text-align: center;
    line-height: 3rem;
}

#mainnav ul li {
    margin: 0 1.25rem;
    list-style: none;
    display: inline-block;
}

#mainnav ul li a {
    font-size: 1.5rem;
    text-decoration: none;
    display: inline-block;
    color: rgb(152, 88, 57) !important;
}

.content {
	  padding: 1.5em;
}


#home-section {
    display: flex;
    flex-direction: row;
    line-height: 5rem;
    margin: 6rem 0;
}

#home-section h1 {
   color: rgb(152, 88, 57);
   font-size: 5rem;
   margin: 0;
}

#home-section h4{
    color: rgb(152, 88, 57);
    font-size: 2.5rem;
    margin: 0;
    font-weight: normal;
 }

 #home-section p {
    color: rgb(152, 88, 57);
    margin: 0;
    font-size: 1.5rem;
 }

#home-section div{
    width: 50%;
    display: flex;
    flex-direction: column;
    text-align: left;
}

#quote-machine-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
}

#quote-machine {
    display: flex;
    flex-direction: column;
    width: 90% !important;
    height: 20rem;
    align-items: center;
}

#quote-area {
    display: flex;
    flex-direction: row !important;
    margin-bottom: 2rem;
    width: 100% ;
    justify-content: center;
    font-style: italic;
}

#quote-area p {
line-height: 1.75rem;
margin: 0 1rem;
min-width: 20%;
max-width: 100%;
}

#titleSpace {
    font-style: italic;
    width: 100%;
}
    
#quotesList {
    display: none;
}

.bookListClass {
    list-style-type: none;
    border-radius: 5%;
    border: 5px solid  #C79D89;
    margin: 3rem 1rem;
    width: 30%;
    order: 1;
    background-color: white;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    cursor: pointer;
    font-size: 1rem;
    padding: 2%;
    word-wrap: break-word;
}

.bookListClass:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.bookListClass h3{
    font-size: 1.5em !important;
   }

.bookListClass button{
    height: 2.5rem;
    width: 7rem;
    line-height: 1.25rem !important;
    margin: 2rem 2rem 0;
    font-size: 1rem;
    border-radius: 3% !important;
}

#bookList {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 0 10%;
    flex-wrap: wrap;
    line-height: 2rem;
}



.deleteThisBook {
    background-color: #2B3A67;
    color: white;
    cursor: pointer;
}

.editThisBook {
    background-color: #5299D3;
    color: white;
    cursor: pointer;
}

.checkGoodReads {
    background-color: #5299D3;
    color: white;
    cursor: pointer;
}

.returnToList {
    background-color: #2B3A67;
    color: white;
    cursor: pointer;
}

#updateSection, .otherInfo {
    display: none;
}

.inputArea {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 15%;
}

.inputArea input{
    width: 100%;
    line-height: 2rem;
    margin: 1.25rem 0;
    font-size: 1rem;
}

.inputArea textarea{
    width: 100%;
    line-height: 2rem;
    margin: 1.25rem 0;
    font-size: 1rem;
    border: 0px solid black;
}

.bigLabel {
    display: block;
    width: 100%;
    text-align: left;  
}

.smallerInputGroup {
    flex-direction: row;
    width: 100%;
}

#mobile-text {
    display: none;
}

.smallerInput {
    justify-content: center;
    width: 20% !important;
    margin: 1.25rem 1rem !important;
    text-align: center;
}

.inputArea button{
    align-self: center;
    line-height: 2rem;
    margin: 1.25rem 0;
    width: 4rem;
    text-align: center;
}

#space {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-bottom: 5rem;
}

#bookList a {
    display: block;
    line-height: 2rem;
}

#quoteSpace, #titleSpace, #leftQuote, #rightQuote {
    opacity: 0;
}

#leftQuote, #rightQuote {
    font-size: 1rem;
    color:rgb(152, 88, 57);
}

#quoteSpace, #titleSpace {
    font-size: 1.5rem !important;
    text-align: center;
}

#quote-area {
    width: 100% !important;
}



/* MEDIA QUERIES
Description: Define screen-size breakpoints here.
(e.g. Desktop, Tablet, Mobile)
===================================== */

/* Tablet (Between 768px - 992px)*/
@media all and (min-width: 768px) and (max-width: 992px) {
    #mainnav h1{
        margin-right: 30%;
      }
}

/* MOBILE (Smaller than 768px)*/
@media all and (max-width: 767px) {
	#mainnav {
        display: inline;
        background-color: rgb(152, 88, 57);
        height: 8rem;
    }

    #bookiLogo {
        display: none;    
    }

    header {
        padding: 0;
        margin-bottom: 3rem;
        background-color: rgb(152, 88, 57);
    }

    #mainnav #menu {
        display: inline-block;
        line-height: 4rem;
        font-size: 4rem;
        text-align: left;
        padding: 0em .3em 0em 1.4em;
        color: white;
        /* background-color: rgb(152, 88, 57); */
    }

    #bookiLogoMobile {
        display: inline-block;
        height: 6rem;
        line-height: 6rem;
        font-size: 2.5rem;
        text-align: center;
        background-color: rgb(152, 88, 57);
        color: white;
        margin-left: .6rem;
    }

    #bookList {
        flex-direction: column;
        align-items: center;
        margin-bottom: 3rem;
        padding: 0;
    }

    .bookListClass {
        list-style-type: none;
        border-radius: 1%;
        border: 5px solid  #C79D89;
        margin: 2rem 1rem;
        width: 80%;
        font-size: 1rem;
        padding: 5%;
        }

    .quoteDisplay {
        line-height: 2.5rem !important;
    }

    #createNewBook {
        margin-top: 3rem;
    }

    #mainnav ul {
        display: none;
        background: white;
        padding: 0;
        text-align: left;
    }
    #mainnav ul li {
        display: block;
        margin: 0;
    }

    #mainnav ul li a {
        display: block;
        padding: .5em 1.5em .5em 2em;
    }

    #mainnav ul li a:hover {
        color: #000;
        background: #aaa;
    }

    #home-section {
        display: flex;
        flex-direction: column ;
        line-height: 5rem;
        margin: 0;
    }

    #home-section div {
        color: rgb(152, 88, 57);
        font-size: 5rem;
        margin: 0;
        text-align: center;
        width: 100%;
     }

     #home-section p {
         margin-top: 2rem;
        line-height: 2rem;
     }

     #quote-machine-container {
         margin-top: 6rem !important;
     }

     #leftQuote, #rightQuote {
        font-size: 1rem;
        line-height: 3.5rem;
    }

    .smallerInputGroup {
        flex-direction: column;
        text-align: right;
    }

    .smallerInput {
        width: 55% !important;
    }

    .inputArea {
        padding: 0 8%;
    }

    .inputArea input{
        height: 3rem;
        margin-bottom: 2rem;
    }

}

